force-app/main/default/objects/DuplicateIgnore__c/DuplicateIgnore__c.object-meta.xml
<CustomObject>
    <description>Registry of record pairs explicitly marked as non-duplicates. PairKey__c ExternalId prevents re-processing ignored pairs across batch runs.</description>
    <label>Duplicate Ignore</label>
    <nameField>
        <label>Ignore Name</label>
        <type>AutoNumber</type>
        <displayFormat>DI-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <pluralLabel>Duplicate Ignores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>