force-app/main/default/objects/DuplicateIgnore__c/fields/IgnoredBy__c.field-meta.xml
<CustomField>
    <fullName>IgnoredBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ignored By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Duplicate Ignores</relationshipLabel>
    <relationshipName>DuplicateIgnores</relationshipName>
    <type>Lookup</type>
</CustomField>