force-app/main/default/objects/DuplicateIgnore__c/fields/IgnoredDate__c.field-meta.xml
<CustomField>
    <fullName>IgnoredDate__c</fullName>
    <label>Ignored Date</label>
    <type>DateTime</type>
</CustomField>