force-app/main/default/objects/DuplicateIgnore__c/fields/PairKey__c.field-meta.xml
<CustomField>
    <fullName>PairKey__c</fullName>
    <externalId>true</externalId>
    <label>Pair Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>